# rusty-pixels

./: Cargo.toml  README.md
src/: main.rs  world.rs
src/world/: linebuf.rs  particle.rs
