[package]
name = "rusty-pixels"
version = "0.1.0"
authors = ["adsick <adsick@protonmail.com>"]
edition = "2018"
resolver = "2"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
env_logger = "0.9"
log = "0.4"
pixels = { path = "../.." }
winit = "0.25"
winit_input_helper = "0.10"
rand = "0.8"
rayon = "1.5"