[package]
name = "rusty-pixels"
version = "0.1.0"
authors = ["adsick <adsick@protonmail.com>"]
edition = "2021"
resolver = "2"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
env_logger = "0.10"
log = "0.4"
pixels = "0.13"
winit = "0.28"
winit_input_helper = "0.14"
rand = "0.8"
rayon = "1.5"

array2d = "0.3"

